packages/docs/content/4.0/components/progress.mdx
---
title: React Progress Component
name: Progress
description: Documentation and examples for using React progress bars featuring support for stacked bars, animated backgrounds, and text labels.

menu: Components
route: /components/progress
---

import { CProgress, CProgressBar, CButton } from './../../../../coreui-react/src/index.ts'

## Example

Progress components are built with two HTML elements, some CSS to set the width, and a few attributes. We don't use [the HTML5 `<progress>` element](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/progress), ensuring you can stack progress bars, animate them, and place text labels over them.

## Basic usage

<Example>
  <CProgress className="mb-3">
    <CProgressBar value={0} />
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar value={25} />
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar value={50} />
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar value={75} />
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar value={100} />
  </CProgress>
</Example>

```jsx
  <CProgress className="mb-3">
    <CProgressBar value={0}/>
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar value={25}/>
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar value={50}/>
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar value={75}/>
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar value={100}/>
  </CProgress>
```

## Labels

Add labels to your progress bars by placing text within the `<CProgressBar>`.

<Example>
  <CProgress className="mb-3">
    <CProgressBar value={25}>25%</CProgressBar>
  </CProgress>
</Example>

```jsx
<CProgress className="mb-3">
  <CProgressBar value={25}>25%</CProgressBar>
</CProgress>
```

## Height

We only set a `height` value on the `<CProgress>`, so if you change that value the inner `<CProgressBar>` will automatically resize accordingly.

<Example>
  <CProgress height={1} className="mb-3">
    <CProgressBar value={25}></CProgressBar>
  </CProgress>
  <CProgress height={20} className="mb-3">
    <CProgressBar value={25}></CProgressBar>
  </CProgress>
</Example>

```jsx
  <CProgress height={1} className="mb-3">
    <CProgressBar value={25}></CProgressBar>
  </CProgress>
  <CProgress height={20} className="mb-3">
    <CProgressBar value={25}></CProgressBar>
  </CProgress>
```

## Backgrounds

Use `color` prop to change the appearance of individual progress bars.

<Example>
  <CProgress className="mb-3">
    <CProgressBar color="success" value={25} />
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="info" value={50} />
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="warning" value={75} />
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="danger" value={100} />
  </CProgress>
</Example>

```jsx
  <CProgress className="mb-3">
    <CProgressBar color="success" value={25}/>
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="info" value={50}/>
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="warning" value={75}/>
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="danger" value={100}/>
  </CProgress>
```

## Multiple bars

Include multiple progress bars in a progress component if you need.

<Example>
  <CProgress className="mb-3">
    <CProgressBar value={15} />
    <CProgressBar color="success" value={30} />
    <CProgressBar color="info" value={20} />
  </CProgress>
</Example>

```jsx
<CProgress className="mb-3">
  <CProgressBar value={15} />
  <CProgressBar color="success" value={30} />
  <CProgressBar color="info" value={20} />
</CProgress>
```

## Striped

Add `variant="striped"` to any `<CProgressBar>` to apply a stripe via CSS gradient over the progress bar's background color.

<Example>
  <CProgress className="mb-3">
    <CProgressBar color="success" variant="striped" value={25} />
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="info" variant="striped" value={50} />
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="warning" variant="striped" value={75} />
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="danger" variant="striped" value={100} />
  </CProgress>
</Example>

```jsx
  <CProgress className="mb-3">
    <CProgressBar color="success" variant="striped" value={25}/>
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="info" variant="striped" value={50}/>
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="warning" variant="striped" value={75}/>
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="danger" variant="striped" value={100}/>
  </CProgress>
```

## Animated stripes

The striped gradient can also be animated. Add `animated` property to `<CProgressBar>` to animate the stripes right to left via CSS3 animations.

<Example>
  <CProgress className="mb-3">
    <CProgressBar color="success" variant="striped" animated value={25} />
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="info" variant="striped" animated value={50} />
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="warning" variant="striped" animated value={75} />
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="danger" variant="striped" animated value={100} />
  </CProgress>
</Example>

```jsx
  <CProgress className="mb-3">
    <CProgressBar color="success" variant="striped" animated value={25}/>
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="info" variant="striped" animated value={50}/>
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="warning" variant="striped" animated value={75}/>
  </CProgress>
  <CProgress className="mb-3">
    <CProgressBar color="danger" variant="striped" animated value={100}/>
  </CProgress>
```

## API

### CProgress

`markdown:CProgress.api.mdx`

### CProgressBar

`markdown:CProgressBar.api.mdx`
